--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 {%load static %}
+<meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8"> 
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
