--- a/question/templates/question/t_setting.html
+++ b/question/templates/question/t_setting.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 {%load static %}
+<meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8"> 
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.css' %}">
@@ -127,7 +128,7 @@ function appendConversationElement(ret)
         <div class="zm-pm-item-main"><a class="pm-touser author-link" title="verna wu" href="/er/'+er_id+'">'+er_name+'</a>：'+message_content+'</div>\
         <div class="zg-gray zu-pm-item-meta">\
         <span class="zg-gray zg-left">'+conversation_update+'</span>\
-        <a class="zg-link-litblue" href="/conversation/?i='+conversation_id+'">查看对话</a>\
+        <a class="zg-link-litblue" href="/conversations/?i='+conversation_id+'">查看对话</a>\
         <span class="zg-bull">|</span>\
         <a class="zg-link-litblue" href="javascript:;" name="reply" data-receiver-id="'+er_id+'"  data-receiver-name="'+er_name+'" data-toggle="modal" data-target="#letterModal">回复</a>\
         <span class="zg-bull">|</span>\
@@ -142,14 +143,121 @@ function appendConversationElement(ret)
     replyConversation();
 }
 
+function appendAllNotificationElement(ret)
+{
+    for (i in ret)
+    {
+        var notification_id=ret[i][0];
+        var notification_type=ret[i][1];
+        var notification_active_id=ret[i][2];
+        var notification_status=ret[i][3];
+        var notification_pub_date=ret[i][4].split('.')[0];
+        var notification_sender_id=ret[i][5];
+        var notification_sender_first_name=ret[i][6];
+        
+        if("invite"==notification_type)
+        {
+            var question_title=ret[i][7];
+            var data='<div class="day">\
+                    <h3>'+notification_pub_date+'</h3>\
+                    <div class="items">\
+                    <div class="invite category">\
+                    <i class="zg-icon" data-tooltip="s$t$邀请"></i>\
+                    <div class="zm-noti7-content-item unread" data-notigroupname="INVITE">\
+                    <span class="author-list">\
+                    <span class="user-block"><a href="/er/'+notification_sender_id+'" target="_blank" class="zg-link author-link">'+notification_sender_first_name+'</a></span>邀请你回答 <a class="question_link" href="/question/'+notification_active_id+'" data-id="18781444" data-za-element-name="Title">'+question_title+'</a>\
+                    </span></div>\
+                    </div>\
+                    </div>\
+                    </div>';
+        }
+        $("#setting-items").append(data);
+    }
+}
+
+function appendSettingsElement(sub_type)
+{
+    console.log("appendSettingsElement");
+    console.log(sub_type);
+    if ("profile"==sub_type)
+    {
+        var user_name=$('#setting-items').attr("data-user-name");
+        var data='<form action="/settings/?sub=profile" method="POST" class="zm-settings-account" id="js-settings-account-form" autocomplete="off">\
+                <input type="hidden" name="_xsrf" value="61656565373836392d613465302d346636302d623866392d326633653736653832623332">\
+                <div class="settings-section">\
+                <div class="settings-item clearfix">\
+                <label for="fullname" class="settings-item-title">姓名</label>\
+                <div class="settings-item-content rename-section" id="rename-section">\
+                <span class="name">'+user_name+'</span>\
+                <a href="javascript:;" class="zu-edit-button rename-button" name="edit"><i class="zu-edit-button-icon"></i>修改</a>\
+                </div>\
+                </div>\
+                </div>\
+                <div class="settings-save">\
+                <button type="submit" class="Button Button--primary Button--blue">保存</button>\
+                </div>\
+                </form>';
+        $('#setting-items').append(data);        
+    }
+    else  if ("account"==sub_type)
+    {
+        var data='<form action="/settings/?sub=profile" method="POST" class="zm-settings-account" id="js-settings-account-form" autocomplete="off">\
+                <input type="hidden" name="_xsrf" value="61656565373836392d613465302d346636302d623866392d326633653736653832623332">\
+                <div class="settings-section">\
+                <div class="settings-item clearfix">\
+                <label for="fullname" class="settings-item-title">姓名</label>\
+                <div class="settings-item-content rename-section" id="rename-section">\
+                <span class="name">wudy</span>\
+                <a href="javascript:;" class="zu-edit-button rename-button" name="edit"><i class="zu-edit-button-icon"></i>修改</a>\
+                </div>\
+                </div>\
+                </div>\
+                <div class="settings-save">\
+                <button type="submit" class="Button Button--primary Button--blue">保存</button>\
+                </div>\
+                </form>';
+        $('#setting-items').append(data);        
+    }
+    else if ("notification"==sub_type)
+    {
+        var data='<div class="settings-section">\
+                <div class="settings-item clearfix">\
+                <label><input type="radio" name="inboxmsg-receive" value="all" checked="">允许接收通知</label>\
+                </div>\
+                <div class="settings-item clearfix">\
+                <label><input type="radio" name="inboxmsg-receive" value="all" checked="">禁止接收通知</label>\
+                </div>\
+                </div>\
+                <div class="settings-save">\
+                <button type="submit" class="Button Button--primary Button--blue">保存</button>\
+                </div>';
+        $('#setting-items').append(data);        
+    }
+    else if ("conversation"==sub_type)
+    {
+        var data='<div class="settings-section">\
+                <div class="settings-item clearfix">\
+                <label><input type="radio" name="inboxmsg-receive" value="all" checked="">允许接收私信</label>\
+                <label><input type="radio" name="inboxmsg-receive" value="all" checked="">禁止接收私信</label>\
+                </div>\
+                </div>\
+                <div class="settings-save">\
+                <button type="submit" class="Button Button--primary Button--blue">??</button>\
+                </div>';
+        $('#setting-items').append(data);        
+    }
+}
 
 //获取文档完整的高度 
 function getMoreData(step) { 
     var type=$("#setting-items").attr("data-type");
-    var conversation_id=$("#setting-items").attr("data-conversation-id");
-    if(("conversations"==type)&&("null"!=conversation_id))
+    if("conversations"==type)
     {
-        type="conversation_messages/"+conversation_id;
+        var conversation_id=$("#setting-items").attr("data-conversation-id");
+        if("null"!=conversation_id)
+        {
+            type="conversation_messages/"+conversation_id;
+        }
     }
     var nums=$('.Setting-item').length;
     var order=1;//pub_date
@@ -162,6 +270,8 @@ function getMoreData(step) {
                 appendConversationElement(ret);
             else if(type.indexOf("conversation_messages")>-1)
                 appendConversationMessagesElement(ret);
+            else if("notifications"==type)
+                appendAllNotificationElement(ret);
             checkSets();
             //alert(ret);
         }
@@ -185,9 +295,27 @@ $(function() {
 */
 function init()
 {
-    getMoreData(10);
+    var type=$("#setting-items").attr("data-type");
+    if (("notifications"==type)||("conversations"==type))
+    {
+        getMoreData(10);
+    }
+    else
+    {
+        var sub_type=$("#setting-items").attr("data-sub-type");
+        console.log(sub_type);
+        $(".settings-link").removeClass("active");
+        $(".settings-link").each(function(){
+            if($(this).children("a").attr("href"))
+            {
+                if($(this).children("a").attr("href").indexOf(sub_type)>-1)
+                    $(this).addClass("active");
+            }
+        });
+        appendSettingsElement(sub_type);
+    }
     appendLetterModal();
-    
+    checkSets();    
 }
 </script>
 </head>
@@ -206,7 +334,7 @@ function init()
 </a>
 </div>
 <nav role="navigation" class="col-md-3">
-<a class="AppHeader-navItem is-active" href="/">首页</a>
+<a class="AppHeader-navItem" href="/">首页</a>
 <a class="AppHeader-navItem" href="/maimai">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
@@ -269,6 +397,8 @@ function init()
         <div class="container">
         <div class="row">
         <div class="1col-md-offset-1 col-md-8">
+        <div class="zu-main-content">
+        <div class="zu-main-content-inner">
         {% if parter %}
             <div class="zg-section"><a href="/conversation">« 返回</a></div>
             <div class="zg-section zg-14px"><span class="zg-gray-normal">发私信给 </span><span class="zg-gray-darker">{{parter.first_name}}</span>：</div>
@@ -281,10 +411,37 @@ function init()
             <div class="zm-command"><button class="Button Messages-sendButton Button--primary Button--blue" type="button" onclick="sendLetter2()">发送</button></div>
             </div>
         {% endif %}
-        {% if type %}
+        {% ifequal type 'conversations' %}
             <div id="setting-items" data-type="{{type}}" data-conversation-id="{{conversation_id}}">
             </div>
-        {% endif %}
+        {% else %}
+            {% ifequal type 'notifications' %}
+                <div id="zh-noti7">
+                <div class="zm-noti-header">全部消息提醒<span class="zm-noti-header-unread-amount"></span></div>
+                <div class="zm-noti7-wrap zu-noti7-all" id="zh-noti7-list">
+                <div id="zh-noti7-list-inner">
+                <div id="setting-items" data-type="{{type}}">
+                </div>
+                </div>
+                </div>
+                </div>
+            {% else %}
+                <ul class="nav nav-tabs nav-justified">
+                <li class="settings-link"><a href="/settings/?sub=profile">基本资料</a></li>
+                <li class="settings-link"><a href="/settings/?sub=account">账号和密码</a></li>
+                <li class="settings-link"><a href="/settings/?sub=notification">通知提醒</a></li>
+                <li class="settings-link"><a href="/settings/?sub=conversation">私信设置</a></li>
+                </ul>
+                <div id="setting-items"  data-type="{{type}}" data-sub-type="{{sub_type}}" data-user-name="{{user.first_name}}">
+                </div>
+            {% endifequal%}
+        {% endifequal %}
+        </div>
+        </div>
+        
+        
+        
+
         <!--
         {% if conversation_list%}
         {% for conversation in conversation_list %}
