--- a/static/common/main.css
+++ b/static/common/main.css
@@ -1,5 +1,56 @@
-/*@import url(http://fonts.googleapis.com/css?family=Roboto:100);*/
-/*@import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);*/
+
+/**************reset.css************************/
+/*
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+*/
+/**************reset.css************************/
+/*
+ol, ul {
+	list-style: none;
+} 
+*/
 
 body {
   /*background: url(timg.jpg);*/
@@ -196,7 +247,6 @@ form input[type=password] {
     color: #ffffff;
     text-align: center;
     border-radius: 5px;
-    /*box-shadow: 0px 3px 1px #2075aa;*/
   	-webkit-transition: all 0.15s linear;
 	  -moz-transition: all 0.15s linear;
 	  transition: all 0.15s linear;
@@ -204,23 +254,19 @@ form input[type=password] {
 
 .button:hover {
   background: #1e75aa;
-  /*box-shadow: 0 3px 1px #237bb2;*/
 }
 
 .button:active {
   background: #136899;
-  /*box-shadow: 0 3px 1px #0f608c;*/
 }
 
 ::-webkit-input-placeholder {
   color: #e74c3c;
 }
 :-moz-placeholder {
-  /* Firefox 18- */
   color: #e74c3c;
 }
 ::-moz-placeholder {
-  /* Firefox 19+ */
   color: #e74c3c;
 }
 :-ms-input-placeholder {
@@ -243,40 +289,25 @@ form input[type=password] {
     text-align:center;
 }
 .QuestionFrame{
-    /*
-    border-color:#000;
-    border-style:solid; 
-    border-width:1px; 
-    */
     padding:2%;
     word-wrap:break-word;
     background-color:#ffffff;
 }
 
 .AnswerFrame{
-    /*
-    border-color:#000;
-    border-style:solid; 
-    border-width:1px;
-    */
     word-wrap:break-word;
     background-color:#ffffff;
 }
 .Banner{
-    /*
-    border-color:#000;
-    border-style:solid; 
-    border-width:1px;
-    */
     height:60px;
     position: absolute;
     left: 0;
     right:0;
     background-color:#ffffff;
 }
-/* The max width is dependant on the container (more info below) */
+
 .popover{
-    max-width: 100%; /* Max Width of the popover (depending on the container!) */
+    max-width: 100%;
 }
 .keep-topic-feed-title{font-size:14px;font-weight:700;color:#666;border-bottom:1px solid #ccc;padding-bottom:8px}
 .keep-topic-feed-title a{margin-top:3px}
@@ -303,6 +334,7 @@ form input[type=password] {
     margin-left:14px;
     /*overflow:hidden*/
 }
+
 .Topic-head{
     display:-webkit-box;
     display:-ms-flexbox;
@@ -402,9 +434,7 @@ form input[type=password] {
 }
 
 
-/*html.no-touchevents .zm-pm-item:hover .zu-autohide{display:inline-block}*/
 .zm-pm-item+.zm-pm-item{border-top:1px solid #eee}
-/*.zm-pm-nav{list-style:none;margin:0;padding:0}*/
 
 
 
@@ -541,5 +571,96 @@ html.no-touchevents .zm-topic-cat-sub a:hover strong,html.no-touchevents .zm-top
 .clearfix{*zoom:1}
 .clearfix:before,.clearfix:after{display:table;content:""}
 .clearfix:after{clear:both}
+
+
+.nav-tabs a {
+    display: block;
+    padding: 5px 15px;
+    min-width: 45px;
+    color: #259;
+    text-decoration: none;
+    border: 1px solid transparent;
+    border-radius: 2px 2px 0 0;
+}
+
+.zu-main.no-sidebar .zu-main-content {
+    float: none;
+}
+
+.zu-main-content {
+    float: left;
+    width: 100%;
+    height: 100%;
+    min-height:340px;
+}
+
+
+.settings-section {
+    margin-top: 10px;
+    border-bottom: 1px solid #eee;
+}
+.settings-item {
+    padding: 12px 0;
+    width: 100%;
+}
+.settings-item-title {
+    width: 65px;
+    text-align: left;
+    float: left;
+}
+
+label {
+    cursor: default;
+}
+
+.settings-item-title+.settings-item-content {
+    margin-left: 90px;
+}
+
+.zu-edit-button {
+    color: #999;
+    display: inline-block;
+    font-size: 11px;
+    -webkit-text-size-adjust: none;
+    font-weight: 400;
+    padding: 0 5px 0 2px;
+    margin: 0 0 0 2px;
+}
+
+.settings-save {
+    margin-top: 25px;
+}
+
+.zm-noti-header {
+    font-weight: 700;
+    font-size: 14px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #CCC;
+    position: relative;
+}
+.zm-noti7-wrap .zm-item-more-wrap{border:0}
+
+.zu-noti7-all .day{margin-top:10px}
+.zu-noti7-all .day h3{font-size:13px}
+.zu-noti7-all .items{border-top:1px solid #eee}
+.zu-noti7-all .category .zg-icon{float:left;width:13px;height:13px;margin-top:13px}
+.zu-noti7-all .category.vote .zg-icon{background-position:-180px -46px}
+.zu-noti7-all .category.follow .zg-icon{background-position:-152px -46px}
+.zu-noti7-all .category.answer .zg-icon{background-position:-166px -45px;margin-top:11px}
+.zu-noti7-all .category.invite .zg-icon{background-position:-194px -46px}
+.zu-noti7-all .category.edit .zg-icon{background-position:-221px -46px;margin-top:12px}
+.zu-noti7-all .category.comment .zg-icon{background-position:-208px -46px}
+.zu-noti7-all .category.mention .zg-icon{background-position:-235px -46px}
+.zu-noti7-all .category+.category{border-top:1px dashed #eee}
+.zu-noti7-all .zm-noti7-content-item{padding:8px 0;margin-left:20px;position:relative}
+.zu-noti7-all .zm-noti7-content-item .OrgIcon{display:none}
+.zu-noti7-all .zm-noti7-content-item+.zm-noti7-content-item{border-top:1px dashed #eee}
+.zu-noti7-all .time{font-size:12px;color:#999;margin-left:8px}
+.zu-noti7-all .unfold a,.zu-noti7-all .weak-link{color:#698ebf}
+.zu-noti7-all .spinner{height:22px;display:block;background:url(/static/revved/img/spinner2.a45a3423.gif);background-repeat:no-repeat;background-position:0 3px;width:22px;text-indent:999px;overflow:hidden;margin-bottom:-8px}
+.zu-noti7-all .zm-noti7-expandable .zm-noti7-content-item,.zu-noti7-all .unfold{border-top:1px dashed #eee}
+.zu-noti7-all .loading,.zu-noti7-all .empty{padding:60px;text-align:center}
+.zu-noti7-all .day a{color:#259}
+
 
 
