--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -242,9 +242,17 @@ function appendAuthorCardElement(ret)
     var author_answer_nums=ret[4];
     var author_follower_nums=ret[5];
     var author_followed=ret[6];
-    
-    
-
+    var author_sexual=ret[7];
+    if("f"==author_sexual)
+    {
+        var who="she";
+        var who_han="她";
+    }
+    else
+    {
+        var who="he";
+        var who_han="他";
+    }
     var data1='\<div class="Card-header AnswerAuthor-title"><div class="Card-headerText">关于作者</div>\</div>\
     <div class="Card-section">\
     <div class="AnswerAuthor-user">\
@@ -285,9 +293,9 @@ function appendAuthorCardElement(ret)
     </div>\
     ';
     if (author_followed)
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--grey" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="true">已关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
+        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--grey" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="true" data-who="'+who+'">已关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
     else
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--blue" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="false">关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
+        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--blue" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="false" data-who="'+who+'">关注'+who_han+'</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
     var data=data1+data2;
     $(".Card.AnswerAuthor").append(data);
     setLetterReceiver(author_id,author_name);
@@ -485,7 +493,7 @@ function init()
 
 <div class="AppHeader-profile">
 <div class="1Popover AppHeader-menu">
-<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
+<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-er-avatar="{{user.userprofile.avatar}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="{{user.userprofile.avatar}}" srcset="{{user.userprofile.avatar}} 2x">
 </div>
 </div>
 
@@ -709,7 +717,7 @@ function init()
         <div class="AuthorInfo-content">
         <div class="AuthorInfo-head">
         <span class="UserLink AuthorInfo-name">
-        <a class="UserLink-link" href="/er/{{push_answer.author.id}}">{{push_answer.author.username}}</a>
+        <a class="UserLink-link" href="/er/{{push_answer.author.id}}">{{push_answer.author.first_name}}</a>
         </span>
         </div>
         <div class="AuthorInfo-detail">
