--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -131,7 +131,7 @@ function init()
 </div>
 <nav role="navigation" class="col-md-3">
 <a class="AppHeader-navItem is-active" href="/">首页</a>
-<a class="AppHeader-navItem" href="/maimai">买卖</a>
+<a class="AppHeader-navItem" href="/trade">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
 
