--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -441,8 +441,8 @@ function init()
 </a>
 </div>
 <nav role="navigation" class="col-md-3">
-<a class="AppHeader-navItem is-active" href="/">首页</a>
-<a class="AppHeader-navItem" href="/explore">发现</a>
+<a class="AppHeader-navItem" href="/">首页</a>
+<a class="AppHeader-navItem" href="/trade">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
 
