--- a/question/templates/question/t_topic.html
+++ b/question/templates/question/t_topic.html
@@ -148,7 +148,7 @@ function init()
 </div>
 <nav role="navigation" class="col-md-3">
 <a class="AppHeader-navItem" href="/">首页</a>
-<a class="AppHeader-navItem" href="/maimai">买卖</a>
+<a class="AppHeader-navItem" href="/trade">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
 
