add answer page and modify edit toolbar

--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -15,6 +15,7 @@
 <script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
 <script src="{% static 'common/main.js' %}"></script>
     
  <script>
