--- a/question/templates/question/t_answer.html
+++ b/question/templates/question/t_answer.html
@@ -19,44 +19,141 @@
 <script src="{% static 'common/main.js' %}"></script>
     
 <script>
+
+function appendAnswerTheRecommendElement(ret)
+{
+    for ( var i in ret)
+    {
+        var question_id=ret[i][0];
+        var question_title=ret[i][1];
+        var question_pubdate=ret[i][2].split('.')[0];
+        var question_answer_nums=ret[i][3];
+        var question_follower_nums=ret[i][4];
+        
+        var topic_id=1;
+        var topic_name="话题";
+        
+        var data='<div class="List-item">\
+                        <div class="Feed-title">\
+                            <div class="Feed-meta">\
+                            <span class="Feed-meta-item">来自话题:<span>\
+                            <a href="/topic/'+topic_id+'/" class="TopicPopover" data-topic-id="'+topic_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+topic_name+'</a>\
+                            </div>\
+                        </div>\
+                        <div class="ContentItem"><h3 class="ContentItem-title"><div class="QuestionItem-title"><a href="/question/'+question_id+'" target="_blank">'+question_title+'</a></div></h3><div class="ContentItem-status"><span class="ContentItem-statusItem">'+question_answer_nums+' 个回答</span><span class="ContentItem-statusItem">'+question_follower_nums+' 个关注</span></div></div>\
+                    </div>';
+        $("#answer-items").append(data);
+    }
+}
+
+function appendAnswerTheAllElement(ret)
+{
+    for ( var i in ret)
+    {
+        var question_id=ret[i][0];
+        var question_title=ret[i][1];
+        var question_pubdate=ret[i][2].split('.')[0];
+        var question_answer_nums=ret[i][3];
+        var question_follower_nums=ret[i][4];        
+        var topic_id=ret[i][5];
+        var topic_name=ret[i][6];
+        
+        var data='<div class="List-item">\
+                        <div class="Feed-title">\
+                            <div class="Feed-meta">\
+                            <span class="Feed-meta-item">来自话题:<span>\
+                            <a href="/topic/'+topic_id+'/" class="TopicPopover" data-topic-id="'+topic_id+'" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">'+topic_name+'</a>\
+                            </div>\
+                        </div>\
+                        <div class="ContentItem"><h3 class="ContentItem-title"><div class="QuestionItem-title"><a href="/question/'+question_id+'" target="_blank">'+question_title+'</a></div></h3><div class="ContentItem-status"><span class="ContentItem-statusItem">'+question_answer_nums+' 个回答</span><span class="ContentItem-statusItem">'+question_follower_nums+' 个关注</span></div></div>\
+                    </div>';
+        $("#answer-items").append(data);
+    }
+}
+
+function appendAnswerInvitedElement(ret)
+{
+    for ( var i in ret)
+    {
+        var notification_id=ret[i][0];
+        var notification_type=ret[i][1];
+        var notification_active_id=ret[i][2];
+        var notification_status=ret[i][3];
+        var notification_pub_date=ret[i][4].split('.')[0];
+        var notification_sender_id=ret[i][5];
+        var notification_sender_first_name=ret[i][6];
+        var question_title=ret[i][7];
+        var question_answer_nums=ret[i][8];
+        var question_follower_nums=ret[i][9]; 
+        
+        var data='<div class="List-item">\
+                        <div class="ContentItem"><h3 class="ContentItem-title"><div class="QuestionItem-title"><a href="/question/'+notification_active_id+'" target="_blank">'+question_title+'</a></div></h3><div class="ContentItem-status"><span class="ContentItem-statusItem"><a href="/er/'+notification_sender_id+'">'+notification_sender_first_name+'</a></span><span class="ContentItem-statusItem">邀请你回答</span><span class="ContentItem-statusItem">'+notification_pub_date+' </span><span class="ContentItem-statusItem">'+question_answer_nums+' 个回答</span><span class="ContentItem-statusItem">'+question_follower_nums+' 个关注</span></div></div>\
+                    </div>';
+        $("#answer-items").append(data);
+    }
+}
+
+//获取文档完整的高度 
+function getMoreData(step) { 
+    var type=$("#answer-items").attr("data-type");
+    var nums=$('.List-item').length;
+    var order=1;//pub_date
+    var start=nums;
+    var end=start+step;
+    $.get('/ajax/answer_page/'+type+'/'+order+'/'+start+'/'+end+'/',function(ret){
+        if("fail"!=ret)
+        {
+            if("recommend"==type)
+                appendAnswerTheRecommendElement(ret);
+            else if("all"==type)
+                appendAnswerTheAllElement(ret);
+            else if("invited"==type)
+                appendAnswerInvitedElement(ret);
+            checkSets();
+            //alert(ret);
+        }
+    });
+} 
+
+
+window.onscroll = function () { 
+console.log(getScrollTop());
+console.log(getClientHeight());
+console.log(getScrollHeight());
+if (getScrollTop() + getClientHeight() +1 >= getScrollHeight()) { 
+        getMoreData(5); 
+    } 
+} 
+
+/*
+$(function() {
+    getMoreData();
+});
+*/
 function init()
-{   
-    $('#summernote_answer').summernote({
-    height:200,
-    lang:'zh-CN',
-    placeholder:'写回答...',
-    callbacks: {
-        onImageUpload: function(files){
-            img=sendFileAnswer(files[0]);
-            console.log(img);
+{
+    var type=$("#answer-items").attr("data-type");
+    console.log(type);
+    $(".settings-link").removeClass("active");
+    $(".settings-link").each(function(){
+        if($(this).children("a").attr("href"))
+        {
+            if($(this).children("a").attr("href").indexOf(type)>-1)
+                $(this).addClass("active");
         }
-    }
-    });
-    
-    $('#summernote_question').summernote({
-    height:120,
-    lang:'zh-CN',
-    placeholder:'问题背景、条件等详细信息',
-    callbacks: {
-        onImageUpload: function(files){
-            img=sendFileQuestion(files[0]);
-            console.log(img);
-        }
-    }
-    });
-    
+    });    
+    getMoreData(10);
     appendLetterModal();
-    checkSets();
+    checkSets();    
 }
 </script>
 </head>
-<body class="Entry-body">
 
-<div>
-<header role="banner" class="Sticky AppHeader">
+<body class="Entry-body">
+<header  role="banner" class="123Sticky AppHeader">
 <div class="AppHeader-inner">
+
 <div class="container">
-<!-- react-empty: 1220 -->
 <div class="row">
 <div class="col-md-1">
 <a href="/" aria-label="大大大">
@@ -71,16 +168,6 @@ function init()
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
 
-<!--
-<div class="SearchBar col-md-6" role="search">
-<input type="text" maxlength="100" value="" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-activedescendant="AutoComplet-88417-181--1" id="Popover-88417-61448-toggle" aria-haspopup="true" aria-owns="Popover-88417-61448-content" class="Input" placeholder="搜索你感兴趣的内容…">
-<button class="Button SearchBar-searchIcon Button--primary" aria-label="搜索" type="button">
-<svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g>
-</svg>
-</button>
-<button class="Button QuestionAskButton SearchBar-askButton btn-success" type="button" data-toggle="modal" data-target="#askModal">提问</button>
-</div>
--->
 
 <div class="SearchBar col-md-6" role="search">
 <div class="SearchBar-toolWrapper">
@@ -101,6 +188,7 @@ function init()
 <button class="1Button QuestionAskButton SearchBar-askButton 1Button--primary 1Button--green btn btn-success" type="button" data-toggle="modal" data-target="#askModal">提问</button>
 </div>
 
+
 <div class="AppHeader-userInfo col-md-2">
 <div class="1Popover PushNotifications AppHeader-notifications">
 <button class="1Button PushNotifications-icon 1Button--plain" type="button" id="NotificationPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
@@ -110,7 +198,7 @@ function init()
 </div>
 
 <div class="1Popover Messages AppHeader-messages">
-<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" id="Popover-88478-87650-toggle" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
+<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
 </svg>
 </button>
@@ -127,25 +215,50 @@ function init()
 </div>
 </div>
 </div>
-
-<!--<div class="PageHeader"><div data-reactroot="" class="QuestionHeader-content"><div class="QuestionHeader-main"><h1 class="QuestionHeader-title">你见过的最美丽的短发女性角色是谁？</h1></div><div class="QuestionHeader-side" data-za-module="ToolBar" data-za-module-info="{&quot;card&quot;:{&quot;content&quot;:{&quot;type&quot;:&quot;Question&quot;,&quot;token&quot;:&quot;59214151&quot;}}}"><div class="QuestionButtonGroup"><button class="Button 1FollowButton Button--primary Button--blue" type="button">关注问题</button><button class="Button Button--blue" type="button"><svg viewBox="0 0 12 12" class="Icon Button-icon Icon--modify" width="14" height="16" aria-hidden="true" style="height: 16px; width: 14px;"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g></svg>写回答</button></div></div></div></div>-->
-
 </header>
-</div>
 
-<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;">
-</div>
+<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;"></div>
 
-
-<!--------------------main---------------------->
-<main role="main" class="App-main">
-<h1>功能实现中，敬请期待</h1>         
-</main>
-<!--------------------main end-------------------->
+        <!--------------------main---------------------->
+        <main role="main">
+      
+        <div class="AppHeader">
+        <div class="container">
+        <div class="row">
+        <div class="1col-md-offset-1 col-md-8">
+        
+        <div class="zu-main-content">
+        <div class="zu-main-content-inner">
+                <ul class="nav nav-tabs nav-justified">
+                <li class="settings-link"><a href="/answer_page/?type=recommend">为你推荐</a></li>
+                <li class="settings-link"><a href="/answer_page/?type=all">全站</a></li>
+                <li class="settings-link"><a href="/answer_page/?type=invited">邀请回答</a></li>
+                </ul>
+                {% ifequal type 'recommend' %}
+                <div class="List-header"><h5 class="List-headerText"><span>为你推荐的问题</span></h5></div>
+                {% else %}
+                    {% ifequal type 'all' %}
+                    <div class="List-header"><h5 class="List-headerText"><span>全站的问题</span></h5></div>
+                    {% else %}
+                    <div class="List-header"><h5 class="List-headerText"><span>邀请我回答的问题</span></h5></div>
+                    {% endifequal %}
+                {% endifequal %}
+                <div id="answer-items"  data-type="{{type}}" data-user-name="{{user.first_name}}">
+                </div>
+        </div>
+        </div>
+        
+        </div>
+        </div>
+        </div>
+        </div>
+        
+        </main>
+        <!--------------------main end-------------------->
 
 
 <!--- div other--->
-<!-- 模态框（Modal）for ask -->
+<!-- 提问（Modal） -->
 <div class="modal fade" id="askModal" tabindex="-1" role="dialog" aria-labelledby="askModalLabel" aria-hidden="true">
 	<div class="modal-dialog askmodal">
         <div class="Modal-inner">
@@ -181,43 +294,17 @@ function init()
                     </div>
                 </div>
 		</div>        
-        <button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain 1close" aria-label="关闭" type="button">
+        <button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain close" aria-label="关闭" type="button">
         <svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>        
 	</div>
 </div>
 <!--- div other--->
 
-<!--- div other for invite--->
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="inviteModal" tabindex="-1" role="dialog" aria-labelledby="inviteModalLabel" aria-hidden="true">
-<div class="modal-dialog inviteModal">
-<div class="Modal-inner">
-<div class="Modal-content Modal-content--spread">
-<div class="QuestionInvitation">
-<div class="Topbar">
-<div class="Topbar-title">
-<h2 class="QuestionInvitation-title">你可以邀请下面用户，快速获得回答</h2>
-</div>
-<div class="Topbar-options">
-<div class="QuestionInvitation-input Input-wrapper">
-<input data-tooltip="也可以搜索职业、公司等资料" data-tooltip-position="bottom" class="Input" placeholder="搜索你想邀请的人">
-<div class="Input-after">
-<svg viewBox="0 0 16 16" class="Icon Icon--search" width="14" height="16" aria-hidden="true" style="height: 16px; width: 14px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg>
-</div>
-</div>
-</div>
-</div>
-<div class="QuestionInvitation-content">
-<div class="List">
-</div>
-</div>
-</div>
-</div>
-<button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain 1close" aria-label="关闭" type="button"><svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
-</div>
-</div>
-
 <!--- div other--->
+<!-- 私信（Modal） -->
+<!-- append by js -->
+<!--- div other--->
+
 </body>
 
 </html>
