--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -15,6 +15,7 @@
 <script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
 <script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script>
 <script src="{% static 'common/main.js' %}"></script>
     
 <script>
@@ -398,24 +399,25 @@ function init()
     checkSets();
     
     $('#summernote_answer').summernote({
+    toolbar: [
+    // [groupName, [list of button]]
+    ['style', ['bold', 'italic', 'underline', 'clear']],
+    ['font', ['strikethrough', 'superscript', 'subscript']],
+    ['fontsize', ['fontsize']],
+    ['color', ['color']],
+    ['para', ['paragraph']],
+    ['table', ['table']],
+    ['link', ['link']],
+    ['picture', ['picture']],
+    ['video', ['video']],
+    ['fullscreen', ['fullscreen']]
+    ],
     height:200,
     lang:'zh-CN',
     placeholder:'写回答...',
     callbacks: {
         onImageUpload: function(files){
             img=sendFileAnswer(files[0]);
-            console.log(img);
-        }
-    }
-    });
-    
-    $('#summernote_question').summernote({
-    height:120,
-    lang:'zh-CN',
-    placeholder:'问题背景、条件等详细信息',
-    callbacks: {
-        onImageUpload: function(files){
-            img=sendFileQuestion(files[0]);
             console.log(img);
         }
     }
