--- a/question/templates/question/t_signinup.html
+++ b/question/templates/question/t_signinup.html
@@ -88,9 +88,18 @@
                 <!--/#register.form-action-->
             </div>
         </div>
-        
+    
+        <div class="row">
+          <div class="11banner col-xs-10 col-xs-offset-2 col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4">
+						<div id="footer">
+						<a class="Footer-item" target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16003534号</a><br><a class="Footer-item" target="_blank" href="http://www.12377.cn">网上有害信息举报专区</a><br><span class="Footer-item">违法和不良信息举报：010-82716601</span><br><!--<a class="Footer-item" target="_blank" href="/jubao">儿童色情信息举报专区</a><br>--><a class="Footer-item" target="_blank" href="/">联系我们</a><span> © 2018 大大大</span>
+						</div> 
+          </div>
+        </div>
+   
 
     </div>
+    
     
     <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
     <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
