add mobile css and js

--- a/question/templates/question/t_index.html
+++ b/question/templates/question/t_index.html
@@ -36,7 +36,7 @@ function appendFeedElement(ret)
     var answer_content=ret[i][9];
     var answer_like_nums=ret[i][10];
     
-    for(var i=0;i<100;i++)
+    for(var j=0;j<100;j++)
         answer_content=answer_content+"&nbsp;";
     var index_img_url=getIndexImg(answer_content);
     var dataStart='<div class="QuestionFrame Card">\
