--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -34,7 +34,7 @@ function appendPushAnswerElement()
     
     var answer_id=push_answer[0];
     var answer_like_nums=push_answer[1];
-    var answer_content=push_answer[2];
+    var answer_content=push_answer[2]+"<p>&nbsp;</p>";
     
     var author_id=push_answer_author[0];
     var author_name=push_answer_author[1];
@@ -81,7 +81,7 @@ function appendMoreAnswerListElement(ret)
     for(i in ret)
     {
         var answer_id=ret[i][0];
-        var answer_content=ret[i][1]+"<p>&nbsp;</p><p>&nbsp;</p>";
+        var answer_content=ret[i][1]+"<p>&nbsp;</p>";
         var answer_like_nums=ret[i][2];
         var answer_comment_nums=ret[i][3];
         var answer_pub_date=ret[i][4];
@@ -127,6 +127,60 @@ function appendMoreAnswerListElement(ret)
         $(".List").append(data);
     }
 }
+function appendAllAnswerListElement(ret)
+{
+    for(i in ret)
+    {
+        var answer_id=ret[i][0];
+        var answer_content=ret[i][1];
+        var answer_like_nums=ret[i][2];
+        var answer_comment_nums=ret[i][3];
+        var answer_pub_date=ret[i][4].split(" ")[0];
+        var author_id=ret[i][5];
+        var author_name=ret[i][6];
+        var author_avatar=ret[i][7];
+        var author_mood=ret[i][8];
+        
+            var data='<div class="ScrollIntoMark"><div class="List-item">\
+                        <div class="ContentItem AnswerItem">\
+                        <div class="ContentItem-meta">\
+                        <div class="AuthorInfo AnswerItem-authorInfo AnswerItem-authorInfo--related">\
+                        <span class="UserLink AuthorInfo-avatarWrapper">\
+                        <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">\
+                        <img class="Avatar AuthorInfo-avatar" width="38" height="38" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
+                        </a>\
+                        </span>\
+                        <div class="AuthorInfo-content">\
+                        <div class="AuthorInfo-head">\
+                        <span class="UserLink AuthorInfo-name">\
+                        <a class="UserLink-link" target="_blank" href="/er/'+author_id+'">'+author_name+'</a>\
+                        </span>\
+                        </div>\
+                        <div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText AuthorInfo-badgeText">'+author_mood+'</div></div></div>\
+                        </div>\
+                        </div>\
+                        </div>\
+                        <div class="RichContent RichContent--unescapable RichContent--withMask">\
+                        <div class="RichContent-inner RichContent-inner--collapsed">\
+                        <span class="RichText CopyrightRichText-richText">'+addClassImg(answer_content,'class="origin_image"')+'</span>\
+                        </div>\
+                        <button class="Button ContentItem-more ContentItem-rightButton Button--plain is-hide" type="button">展开阅读全文<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
+                        <div class="ContentItem-time"><span>发布于 '+answer_pub_date+'</span></div>\
+                        <div class="ContentItem-actions Sticky RichContent-actions is-bottom" style="">\
+                        <span>\
+                        <button class="Button VoteButton VoteButton--up" aria-label="赞同" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-upIcon Icon--triangle" width="9" height="16" aria-hidden="true" style="height: 16px; width: 9px;"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg>12K</button>\
+                        <button class="Button VoteButton VoteButton--down VoteButton--mobileDown" aria-label="反对" type="button"><svg viewBox="0 0 20 18" class="Icon VoteButton-downIcon Icon--triangle" width="9" height="16" aria-hidden="true" style="height: 16px; width: 9px;"><title></title><g><path d="M0 15.243c0-.326.088-.533.236-.896l7.98-13.204C8.57.57 9.086 0 10 0s1.43.57 1.784 1.143l7.98 13.204c.15.363.236.57.236.896 0 1.386-.875 1.9-1.955 1.9H1.955c-1.08 0-1.955-.517-1.955-1.9z"></path></g></svg></button>\
+                        </span>\
+                        <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>评论 643</button>\
+                        <button class="Button ContentItem-action Button--plain Button--withIcon Button--iconOnly" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Star Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z" fill-rule="evenodd"></path></svg></span></button>\
+                        <button class="Button ContentItem-action ContentItem-less ContentItem-rightButton Button--plain" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>\
+                        </div></div></div></div>\
+                        </div>';
+
+        
+        $(".List").append(data);
+    }
+}
 function getMoreAnswerData()
 {
     var order=1;
@@ -139,12 +193,46 @@ function getMoreAnswerData()
             appendMoreAnswerListElement(ret);
             checkSets();
         }
+        setLockScrollMoreData("false");
     });
+}
+
+function getAllAnswerData()
+{
+    var nums=$('.List-item').length;
+    var order=1;
+    var start=nums;
+    var end=start+STEP;
+    var question_id=$(".Question-main").attr("data-question-id");
+    $.get('/ajax/answers/'+question_id+'/'+order+'/'+start+'/'+end+'/',function(ret){
+        if("fail"!=ret)
+        {
+            appendAllAnswerListElement(ret);
+            checkSets();
+        }
+        setLockScrollMoreData("false");
+    });
+}
+
+function getMoreData()
+{
+    if("all"==g_list_type)
+    {
+        getAllAnswerData();
+    }
 }
 function init()
 {
-    appendPushAnswerElement();
-    getMoreAnswerData();
+    g_list_type=$(".List").attr("data-list-type");
+    if("more"==g_list_type)
+    {
+        appendPushAnswerElement();
+        getMoreAnswerData();
+    }
+    else
+    {
+        getMoreData();
+    }
     checkSets();
 }
 </script>
@@ -172,6 +260,8 @@ function init()
 </div>
 <main role="main" class="App-main">
 <div>
+
+
 <div class="QuestionHeader">
 <div class="QuestionStatus">
 </div>
@@ -179,22 +269,39 @@ function init()
 <div class="QuestionHeader-tags">
 </div>
 <div class="QuestionHeader-title">
-<a href="/question/{{ context_question.id }}">{{ context_question.title }}</a></div>
+<a href="/question/{{ context_question.id }}">{{ context_question.title }}</a>
+</div>
+<div class="RichContent RichContent--unescapable RichContent--withMask">
+<!--<div class="RichContent-inner"><span class="RichText CopyrightRichText-richText"></span></div>-->
+<div class="ContentItem-actions">
+<div class="MobileQuestionButtonGroup">
+<button class="Button FollowButton Button--primary Button--blue" type="button">关注问题</button>
+<button class="Button Button--blue" type="button">写回答</button>
 </div>
 </div>
+</div>
+
+</div>
+</div>
+
+
+
+
 <div class="Question-main" data-question-id="{{ context_question.id }}">
+{% if push_answer %}
 <div class="Card AnswerCard">
 <div class="QuestionAnswer-content" data-push-answer="{{push_answer.id}}&#*{{push_answer.like_nums}}&#*{{push_answer.content}}" data-push-answer-author="{{push_answer.author.id}}&#*{{push_answer.author.first_name}}&#*{{push_answer.author.userprofile.avatar}}&#*{{push_answer.author.userprofile.mood}}">
 <!-------------ContentItem AnswerItem--------------------->
 </div>
 </div>
+
 <div style="margin-bottom: 10px;"></div>
 
 <div class="Card">
 <div class="Card-header">
 <div class="Card-headerText">更多回答</div>
 </div>
-<div class="List">
+<div class="List" data-list-type="more">
 <!--<div class="List-item"><div class="ContentItem AnswerItem"></div></div>-->
 </div>
 
@@ -203,6 +310,22 @@ function init()
 <div class="Card ViewAllInappCard">
 <a class="QuestionMainAction" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
 </div>
+
+{% else %}
+
+<div class="Card">
+
+<div class="Card-header">
+<div class="Card-headerText"><h4 class="List-headerText"><span>106 个回答</span></h4></div>
+</div>
+
+<div class="List" data-list-type="all">
+<!--<div class="List-item"><div class="ContentItem AnswerItem"></div></div>-->
+</div>
+
+</div>
+
+{% endif %}
 <!--
 <div class="Card ViewAllInappCard">
 <button class="Button ViewAllInappButton Button--primary Button--blue" type="button">打开 App，查看全部 439 个回答</button>
