--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -226,14 +226,14 @@ function checkProfileSave()
 	$(".save").click(function(){
         var _this=$(this);
 		var field_type=$(this).parents(".Field-content").attr("data-field-type")
-		dlog(field_type);
+		console.log(field_type);
 		if("sexual"==field_type)
 		{	
 			var value=$("input[name='sexual']:checked").val();
 			$.post("/ajax/profile_edit/sexual/",{content:value},function(ret){
                 if("fail"!=ret)
                 {
-                    dlog(ret);
+                    console.log(ret);
                     if("f"==ret)
                     {
                         er_sexual="she";
@@ -308,9 +308,9 @@ function checkProfileSave()
 	$(".cancle").off("click");
 	//$(".cancle").each(function(){
 	$(".cancle").click(function(){
-		dlog("cancle click");
+		console.log("cancle click");
 		var field_type=$(this).parents(".Field-content").attr("data-field-type")
-		dlog(field_type);
+		console.log(field_type);
 		if("sexual"==field_type)
 		{			
 			var data='<div><span class="Field-text">'+er_sexual_han+'</span><button class="Button ModifyButton Field-modify Field-modify-hidden Button--link" type="button"><svg viewBox="0 0 12 12" class="Icon ModifyButton-icon Icon--modify" width="12" height="16" aria-hidden="true" style="height: 16px; width: 12px;"><title></title><g><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g></svg>修改</button></div>';
@@ -354,7 +354,7 @@ function checkProfileModify()
 	$(".Field").find(".ModifyButton").off("click");
 	$(".Field").find(".ModifyButton").click(function(){
 		var field_type=$(this).parents(".Field-content").attr("data-field-type");
-		dlog(field_type);
+		console.log(field_type);
 		if("sexual"==field_type)
 		{
 			if("f"==er_sexual)
@@ -639,11 +639,11 @@ function fileUpload(file_info)
             {
                 $("#upAvatarModal").modal('hide');
                 $("#id_avatar").attr("src",ret).attr("srcset",ret);
-                dlog("fileupload success");
+                console.log("fileupload success");
             }
             else
             {
-                dlog("fileupload ail");
+                console.log("fileupload ail");
             }
         }
     }); // end ajax
@@ -772,10 +772,10 @@ function initData()
     show_detailed="false";
     
 	var str_main_data=$("main").attr("data-dfs-main");
-	dlog(str_main_data);
+	console.log(str_main_data);
 	var main_data=JSON.parse(str_main_data);//str_main_data.parseJSON();
 	var str_ext_data=$("main").attr("data-dfs-ext");
-	dlog(str_ext_data);
+	console.log(str_ext_data);
 	var ext_data=JSON.parse(str_ext_data);
 	
 	user_id=main_data.user_id;
