--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -217,6 +217,8 @@ function getMoreData()
 function init()
 {
     g_login=$("#topstory").attr("data-login");
+    if("true"==g_login)
+        user_id=$("#topstory").attr("data-user-id");
     getMoreData();
     //appendLetterModal();
 }
@@ -231,7 +233,6 @@ function init()
 {% if user %}
 <div>
 <header class="Sticky MobileAppHeader" style="line-height: 50px;">
-<!--<header class="Sticky MobileAppHeader is-fixed" style="line-height: 50px; width: 455.2px; top: 0px; left: 0px;">-->
 <div class="MobileAppHeader-inner">
 <a class="MobileAppHeader-logo" href="//www.danongling.com/" aria-label="大农令"><svg viewBox="0 0 200 91" width="56" height="28" fill="#0f88eb"><title></title><g><path d="M53.29 80.035l7.32.002 2.41 8.24 13.128-8.24h15.477v-67.98H53.29v67.978zm7.79-60.598h22.756v53.22h-8.73l-8.718 5.473-1.587-5.46-3.72-.012v-53.22zM46.818 43.162h-16.35c.545-8.467.687-16.12.687-22.955h15.987s.615-7.05-2.68-6.97H16.807c1.09-4.1 2.46-8.332 4.1-12.708 0 0-7.523 0-10.085 6.74-1.06 2.78-4.128 13.48-9.592 24.41 1.84-.2 7.927-.37 11.512-6.94.66-1.84.785-2.08 1.605-4.54h9.02c0 3.28-.374 20.9-.526 22.95H6.51c-3.67 0-4.863 7.38-4.863 7.38H22.14C20.765 66.11 13.385 79.24 0 89.62c6.403 1.828 12.784-.29 15.937-3.094 0 0 7.182-6.53 11.12-21.64L43.92 85.18s2.473-8.402-.388-12.496c-2.37-2.788-8.768-10.33-11.496-13.064l-4.57 3.627c1.363-4.368 2.183-8.61 2.46-12.71H49.19s-.027-7.38-2.372-7.38zm128.752-.502c6.51-8.013 14.054-18.302 14.054-18.302s-5.827-4.625-8.556-1.27c-1.874 2.548-11.51 15.063-11.51 15.063l6.012 4.51zm-46.903-18.462c-2.814-2.577-8.096.667-8.096.667s12.35 17.2 12.85 17.953l6.08-4.29s-8.02-11.752-10.83-14.33zM199.99 46.5c-6.18 0-40.908.292-40.953.292v-31.56c1.503 0 3.882-.124 7.14-.376 12.773-.753 21.914-1.25 27.427-1.504 0 0 3.817-8.496-.185-10.45-.96-.37-7.24 1.43-7.24 1.43s-51.63 5.153-72.61 5.64c.5 2.756 2.38 5.336 4.93 6.11 4.16 1.087 7.09.53 15.36.277 7.76-.5 13.65-.76 17.66-.76v31.19h-41.71s.88 6.97 7.97 7.14h33.73v22.16c0 4.364-3.498 6.87-7.65 6.6-4.4.034-8.15-.36-13.027-.566.623 1.24 1.977 4.496 6.035 6.824 3.087 1.502 5.054 2.053 8.13 2.053 9.237 0 14.27-5.4 14.027-14.16V53.93h38.235c3.026 0 2.72-7.432 2.72-7.432z" fill-rule="evenodd"></path></g></svg></a>
 <div class="MobileAppHeader-actions">
@@ -242,7 +243,6 @@ function init()
 </div>
 </div>
 </header>
-<!--<div class="Sticky--holder" style="position: static; top: auto; right: auto; bottom: auto; left: auto; display: block; float: none; margin: 0px; height: 53px;"></div>-->
 </div>
 {% else %}
 <div>
@@ -259,8 +259,7 @@ function init()
 
 <main role="main" class="App-main">
 {% if user %}
-
-<div id="topstory" data-login="true">
+<div id="topstory" data-login="true" data-user-id="{{user.id}}">
 <div class="TopstoryMain">
 <div id="topstory-items" class="">
 <!--topstory-item-->
@@ -268,55 +267,25 @@ function init()
 </div>
 </div>
 </div>
-
-<!--
-<div class="Card DownloadGuide DownloadGuide-block">
-<div class="DownloadGuide-inner"><svg xmlns="http://www.w3.org/2000/svg" width="76" height="76" viewBox="0 0 76 76" class="DownloadGuide--logo" alt="logo"><title></title><g><g fill="none" fill-rule="evenodd"><path fill="#0F88EB" d="M57.89 0C68.876 0 76 7.125 76 18.11v39.78C76 68.876 68.875 76 57.89 76H18.11C7.124 76 0 68.875 0 57.89V18.11C0 7.124 7.125 0 18.11 0h39.78z"></path><path fill="#FFF" d="M39.753 39c0 .182-.015-3.68-1.243-4h-8.56c.286-4.113.36-8.12.36-11h8.37c0-.698.322-4.39-1.403-4H22.8c.57-2.493 1.287-4.71 2.145-7 0 0-3.938 0-5.28 3.53-.554 1.46-2.16 7.06-5.02 12.78.963-.102 4.15-.19 6.026-3.632.35-.96.416-1.09.84-1.678h4.727c0 1.018-.196 10.243-.275 11h-8.554c-1.92.32-2.546 4.182-2.546 4h10.73c-.72 8.337-4.58 15.208-11.59 20.643 3.352.956 6.693-.153 8.344-1.62 0 0 3.76-3.417 5.82-11.33l8.83 10.624s1.294-4.398-.204-6.54c-1.24-1.46-4.59-5.41-6.018-6.84l-2.393 1.898c.71-2.286 1.14-4.507 1.285-6.835H39.75zm2.305-19.96v35.237h3.844l1.265 4.692 6.893-4.697H62V19.04H42.058zm15.977 31.763h-4.6l-4.592 3-.836-3h-1.96V23.01h11.988v27.793z"></path></g></g></svg>
-<div class="DownloadGuide--slogan">知乎，发现更大的世界</div><span>· 继续阅读更多个性化内容</span><span>· 体验「知乎热榜」新功能</span><button class="DownloadGuide-download">下载 App</button><button class="DownloadGuide-open">打开 App</button>
-<div class="DownloadGuide-blockBg">
 </div>
-</div>
-</div>
--->
-
-</div>
-
-
-
 {% else %}
 <div id="topstory" data-login="false">
 <div class="NotLoggedInTopstory">
-
 <div class="Card NotLoggedInTopstoryItem">
 <!--------not login feed---------->
 </div>
-
 <div class="Card ExploreEvents">
 <!-------ExploreEvents-item------->
 </div>
-
 <div class="List">
 <!--notlogin list-item-->
 </div>
-
 <button class="OpenInAppButton OpenInApp is-shown">App 内打开</button>
-<!--
-<div class="Card DownloadGuide">
-<div class="DownloadGuide-inner DownloadGuide-normalInner"><svg xmlns="http://www.w3.org/2000/svg" width="76" height="76" viewBox="0 0 76 76" class="DownloadGuide--logo" alt="logo"><title></title><g><g fill="none" fill-rule="evenodd"><path fill="#0F88EB" d="M57.89 0C68.876 0 76 7.125 76 18.11v39.78C76 68.876 68.875 76 57.89 76H18.11C7.124 76 0 68.875 0 57.89V18.11C0 7.124 7.125 0 18.11 0h39.78z"></path><path fill="#FFF" d="M39.753 39c0 .182-.015-3.68-1.243-4h-8.56c.286-4.113.36-8.12.36-11h8.37c0-.698.322-4.39-1.403-4H22.8c.57-2.493 1.287-4.71 2.145-7 0 0-3.938 0-5.28 3.53-.554 1.46-2.16 7.06-5.02 12.78.963-.102 4.15-.19 6.026-3.632.35-.96.416-1.09.84-1.678h4.727c0 1.018-.196 10.243-.275 11h-8.554c-1.92.32-2.546 4.182-2.546 4h10.73c-.72 8.337-4.58 15.208-11.59 20.643 3.352.956 6.693-.153 8.344-1.62 0 0 3.76-3.417 5.82-11.33l8.83 10.624s1.294-4.398-.204-6.54c-1.24-1.46-4.59-5.41-6.018-6.84l-2.393 1.898c.71-2.286 1.14-4.507 1.285-6.835H39.75zm2.305-19.96v35.237h3.844l1.265 4.692 6.893-4.697H62V19.04H42.058zm15.977 31.763h-4.6l-4.592 3-.836-3h-1.96V23.01h11.988v27.793z"></path></g></g></svg><div class="DownloadGuide--slogan">知乎，发现更大的世界</div>
-<div class="DownloadGuide--downloadButton">
-<a href="https://www.zhihu.com/app?auto_download=true&amp;utm_source=zhihu&amp;utm_campaign=guest_feed&amp;utm_content=download&amp;utm_medium=homefeed&amp;utm_source=zhihu">立即下载</a>
-</div>
-</div>
-</div>
--->
 </div>
 </div>
 {% endif %}
 </main>
 </div>
-</div>
-<div>
-<div style="display: none;">想来大农令工作？请发送邮件到 jobs@danongling.com</div>
 </div>
 </body>
 </html>
