--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -218,7 +218,7 @@ function init()
 {
     g_login=$("#topstory").attr("data-login");
     if("true"==g_login)
-        user_id=$("#topstory").attr("data-user-id");
+        g_user_id=$("#topstory").attr("data-user-id");
     getMoreData();
     //appendLetterModal();
 }
